--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,3 +1,7 @@
+<%= content_tag(:div, "", id: "root", data: {controller: "react"}) %>
+
+
+<br>
 <!-- USER selection dropdown. -->
 <div style="display:flex; justify-content:left; align-items: center;">
     <%= form_tag do %>
